--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ before_script:
   - wget http://downloads.typesafe.com/play/${PLAY_VERSION}/play-${PLAY_VERSION}.zip
   - unzip -q play-${PLAY_VERSION}.zip
 script: play-${PLAY_VERSION}/play test
+script: "sbt coveralls"
